# dotfiles

./: .envrc  CLAUDE.md  Cargo.toml  README.md  flake.nix
.beans/: dotfiles-040q--install-bubblewrap-with-codex-on-linux.md  dotfiles-0poj--beansd-use-in-the-rendered-paths-where-applicable.md  dotfiles-16g2--swap-profile-overlay-for-c-injection-in-codex-modu.md  dotfiles-1dhn--op-dispatcher-ls-start-stop-status-heartbeat-handl.md  dotfiles-1emg--add-default-gitignore-via-git-home-manager-config.md  dotfiles-1tu7--real-binary-integration-test-for-beansservespawner.md  dotfiles-1w3a--define-requestresponse-envelope-op-enum-serde.md  dotfiles-2186--index-template-project-query-handling.md  dotfiles-24hc--end-to-end-smoke-test-on-the-dev-box.md  dotfiles-2ecf--uds-control-plane.md  dotfiles-2q5q--make-brainstorming-options-file-transient.md  dotfiles-3531--default-socket-path-add-dev-flag-dev-suffix.md  (+133 more)
crates/beansctl/: Cargo.toml
crates/beansctl/src/: main.rs
crates/beansd/: Cargo.toml  dev-config.toml
crates/beansd/src/: cli.rs  cli_client.rs  config.rs  control.rs  daemon.rs  eviction.rs  handler.rs  health.rs  launcher.rs  logging.rs  main.rs  port_alloc.rs  project_key.rs  registry.rs  run.rs  spawner.rs  supervisor.rs
crates/beansd/src/web/: mod.rs  test_utils.rs  views.rs
crates/beansd/src/web/routes/: assets.rs  mod.rs
crates/beansd/src/web/routes/api/: heartbeat.rs  mod.rs  projects.rs
crates/beansd/src/web/routes/html/: mod.rs  projects.rs
crates/beansd/src/web/static/: app.css
crates/beansd/src/web/templates/: index.html  top_bar.html
(+217 files in other folders)
