[package]
name = "beansd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "beansd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
askama = "0.12"
async-trait.workspace = true
axum = { version = "0.7", features = ["macros"] }
beansd-rpc = { path = "../beansd-rpc" }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tokio.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = "2"

[dev-dependencies]
assert_matches = "1"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
